ampliate norme sulla codifica

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -38,15 +38,15 @@ In particolare, questo documento si appresta a:
 \end{itemize}
 
 \subsection{Struttura del documento}
-Esso è suddiviso nelle seguenti sezioni:
-\begin{description}
-	\item[sezione \ref{sec:modscelto}] Scelta del modello di sviluppo;
-	\item[sezione \ref{sec:rischi}] Analisi e trattamento dei rischi;
-	\item[sezione \ref{sec:pianificazione}] Pianificazione delle attività;
-	\item[sezione \ref{sec:preventivo}] Suddivisione delle ore lavorative e preventivo;
-           \item[sezione \ref{sec:consuntivo}] Consuntivo di periodo;
-	\item[sezione \ref{sec:organigramma}] Organigramma.
-\end{description}
+Il documento è suddiviso nelle seguenti sezioni:
+\begin{itemize}
+	\item la sezione \ref{sec:modscelto} riporta la scelta del modello di sviluppo;
+	\item la sezione \ref{sec:rischi} riporta l'analisi e il trattamento dei rischi;
+	\item la sezione \ref{sec:pianificazione} riporta la pianificazione delle attività;
+	\item la sezione \ref{sec:preventivo} riporta la suddivisione delle ore lavorative e il preventivo;
+	\item la sezione \ref{sec:consuntivo} riporta il consuntivo di periodo;
+	\item la sezione \ref{sec:organigramma} riporta l'organigramma.
+\end{itemize}
 
 \subsection{Scopo del prodotto}
 \scopo
