ampliate norme sulla codifica

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -79,8 +79,10 @@ Il presente documento si divide in tre sezioni principali:
 \subsubsection{Riferimenti informativi}
 \begin{itemize}
 	\item L. Pantieri, \emph{L'arte di scrivere in Latex}: \url{www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf}, visitato in data 08/02/2017;
-	\item SDMetrics User Manual: \url{www.sdmetrics.com/manual/index.html}, visitato in data 21/02/2017;
-	\item CodePro Analytix Help Contents.
+	\item \emph{SDMetrics User Manual}: \url{www.sdmetrics.com/manual/index.html}, visitato in data 21/02/2017;
+	\item \emph{CodePro Analytix Help Contents};
+	\item Standard \emph{JavaDoc}: \url{www.oracle.com/technetwork/java/javase/documentation/index-jsp-135444.html};
+	\item API \emph{JSDdoc}: \url{github.com/jsdoc3/jsdoc}.
 \end{itemize}
 
 
@@ -252,8 +254,8 @@ Il presente documento si divide in tre sezioni principali:
 	\begin{itemize}
 		\item i programmatori devono spiegare, con un commento, ogni componente;
 		\item i programmatori devono spiegare, con un commento, ogni metodo e funzione;
-		\item la spiegazione di una componente o di un metodo Java deve seguire gli standard di documentazione JavaDoc;
-		\item la spiegazione di una componente, di un metodo o di una funzione JavaScript deve seguire le linee guida di jdoc (\url{github.com/jsdoc3/jsdoc});
+		\item la spiegazione di una componente o di un metodo Java deve seguire gli standard di documentazione \emph{JavaDoc};
+		\item la spiegazione di una componente, di un metodo o di una funzione JavaScript deve seguire le linee guida dell'API \emph{JSDdoc} (nei riferimenti informativi);
 		\item quando possibile, è bene documentare con un commento in linea parti di codice non immediatamente comprensibili;
 		\item ogni commento in linea deve recare uno spazio tra il testo e il marcatore di inizio commento;
 		\item è opportuno usare frasi di senso compiuto in modo da essere più chiari possibili;
