aggiornati diari per NdP,PdP e AdR e modifiche varie

--- a/doc/Esterni/Analisi_dei_requisiti/diario.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/diario.tex
@@ -2,8 +2,12 @@
 % da includere con \include{diario}
 
 \begin{diario}
-	1.0.2 & {\PB} (NonMiRicordo!!!!!) & 14/02/2017 & Incrementi e correzioni a seguito della revisione (inserito scenario alternativo UC2, aggiunto UC3.1 alle varie tabelle-tracciamenti, corrette descrizioni UC5 e UC7) \\ \hline
-	1.0.1 & {\GG} (Verificatore) & 01/02/2017 & Incrementi e correzioni a seguito della revisione (creato UC3.1; corretti UC4.1.6.3.2, UC4.2.1, diagramma UC5 e alcune postcondizioni) \\ \hline
+	2.0.0 & {\LS} (Responsabile) & 01/02/2017 & Approvazione del documento \\ \hline
+	1.1.0 & {\GG} (Verificatore) & 01/02/2017 & Verifica del documento \\ \hline
+	1.0.4 & {\AZ} (Analista) & 31/01/2017 & Inserito UC5.26 con relativo requisito e tracciamento nelle tabelle e inseriti i requisiti RFO7, RFO7.1, RFO7.2, RFO8, RFO9 e RFO10 \\ \hline
+	1.0.3 & {\AZ} (Analista) & 29/01/2017 & Corretta la descrizione dello UC5 e approfondita la descrizione dello UC7 \\ \hline
+	1.0.2 & {\AZ} (Analista) & 28/01/2017 & Corretti UC4.1.6.3.2, UC4.2.1 e inserito perimetro sistema del UC5\\ \hline
+	1.0.1 & {\AZ} (Analista) & 26/01/2017 & Inserimento scenario alternativo allo UC2, creazione UC3.1 con relativo requisito e tracciamento nelle tabelle e corrette alcune postcondizioni \\ \hline
 	1.0.0 & {\LB} (Responsabile) & 09/01/2017 & Approvazione documento \\ \hline
 	0.4.0 & {\LS} (Verificatore) & 06/01/2017 & Verifica introduzione, descrizione generale e requisiti \\ \hline
 	0.3.0 & {\MM} (Verificatore) & 06/01/2017 & Verifica UC5.3-UC7 \\ \hline
