--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -59,7 +59,7 @@ Esso è suddiviso nelle seguenti sezioni:
 \begin{itemize}
 	\item \NdP;
 	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}, visitato il 08/02/2017;
-	\item Regolamento del progetto didattico] \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 08/02/2017;
+	\item Regolamento del progetto didattico \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 08/02/2017;
 	\item Vincoli di organigramma e dettagli tecnico-economici: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}, visitato il 08/02/2017.
 \end{itemize}
 \subsubsection{Riferimenti informativi} \label{sec:ref}
@@ -206,7 +206,7 @@ Ogni rischio è caratterizzato da:
 	problemi tra membri del gruppo & monitoraggio, da parte del \Rx{}, dello stato di collaborazione fra i vari membri del gruppo & il \Rx{} provvede, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li facciano collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un ambiente di lavoro il meno stressante possibile & Analisi dei requisiti: rischio mai verificatosi. \\
 	problemi personali dei membri & ognuno è tenuto a comunicare tempestivamente i propri impegni al \Rx{} in modo da create un calendario sincronizzato e condiviso & ad ogni impegno notificato, il \Rx{} eseguirà una nuova parte di pianificazione del periodo problematico & Analisi dei requisiti: rischio verificatosi  a due membri del gruppo, che hanno lasciato una riunione prima del termine per problemi personali. \\
 	problemi di inesperienza & segnalazione al \Rx{} di ogni tecnologia potenzialmente utile; il \Rx{}, una volta approvatone l'utilizzo, demanda al gruppo il compito di documentarsi su di essa & obbligo, per ciascuno, di documentarsi su strumenti e tecnologie utili allo svolgimento del progetto; se questo non fosse sufficiente, il \Rx{} prepara un piano di studi per compensare ogni tipo di lacuna & Analisi dei requisiti: rischio verificatosi soprattutto all'inizio del periodo. \\
-	pianificazione errata & controllo periodico dello stato delle attività nel programma di \emph{project management}, in modo da verificare eventuali ritardi nelle attività & si è deciso di prevedere, per ogni attività, un periodo maggiore di quanto normalmente richiesto e una fase di verifica ogni venerdì della settimana interessata per poter correggere, dove possibile, gli eventuali errori il sabato stesso; in tale maniera, un eventuale ritardo non influenzerà la durata totale del progetto & Analisi dei requisiti: rischio mai verificatosi. \\
+	pianificazione errata & controllo periodico dello stato delle attività nel programma di \emph{project management}, in modo da verificare eventuali ritardi nelle attività & si è deciso di prevedere, per ogni attività, un periodo maggiore di quanto normalmente richiesto e un periodo di verifica ogni venerdì della settimana interessata per poter correggere, dove possibile, gli eventuali errori il sabato stesso; in tale maniera, un eventuale ritardo non influenzerà la durata totale del progetto & Analisi dei requisiti: rischio mai verificatosi. \\
 	incomprensioni e scelte non congrue & incontro con il proponente stesso, per poter discutere dei requisiti identificati e assicurarsi della totale concordanza sulle necessità del prodotto & incontri con il proponente e correzione tempestiva di ogni errore e imprecisione che il committente individua alle revisioni & Analisi dei requisiti: rischio verificatosi durante il secondo incontro, facendo emergere dei nuovi requisiti fondamentali non evidenziati nel capitolato. \\
 	errore nelle previsioni & attento monitoraggio del programma di \emph{project management} da parte del \Rx{}, che deve attuare tempestive modiche alla pianificazione e al rendiconto dei costi & è necessario che ogni membro del gruppo rispetti i tempi delle attività assegnatogli & Analisi dei requisiti: rischio mai verificatosi. \\
 	\hline
@@ -279,7 +279,7 @@ Nota: la "dipendenza all'indietro" che sembra esistere tra \emph{Redazione Norme
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttan1.png}}
 \label{img:genweeks1}
-\caption{Diagramma di Gantt della pianificazione della fase di \AR, in giorni (parte 1)}
+\caption{Diagramma di Gantt della pianificazione dell'\AR, in giorni (parte 1)}
 \end{figure}
 
 \pagebreak
@@ -287,7 +287,7 @@ Nota: la "dipendenza all'indietro" che sembra esistere tra \emph{Redazione Norme
 \makebox[\textwidth][c]{
 \includegraphics[width=1.0\textwidth]{img/ganttan21.png}}
 \label{tab:genweeks2}
-\caption{Diagramma di Gantt della pianificazione della fase di \AR, in giorni (parte 2)}
+\caption{Diagramma di Gantt della pianificazione dell'\AR, in giorni (parte 2)}
 
 Note:
 \begin{itemize}
@@ -307,7 +307,7 @@ Note:
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttari.png}}
 \label{tab:genweeks}
-\caption{Diagramma di Gantt della pianificazione della fase di \ARI, in giorni}
+\caption{Diagramma di Gantt della pianificazione dell'\ARI, in giorni}
 \end{figure}
 
 	
@@ -324,18 +324,18 @@ Note:
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttpa1.png}}
 \label{tab:ganttpa1}
-\caption{Diagramma di Gantt della pianificazione della fase di \PA, in giorni (parte 1)}
+\caption{Diagramma di Gantt della pianificazione della \PA, in giorni (parte 1)}
 \end{figure}
 
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttpa2.png}}
 \label{tab:ganttpa2}
-\caption{Diagramma di Gantt della pianificazione della fase di \PA, in giorni (parte 2)}
+\caption{Diagramma di Gantt della pianificazione della \PA, in giorni (parte 2)}
 
 Note:
 \begin{itemize}
-	\item Per raggiungere il completamento della fase successiva in tempo per la \emph{Revisione di Qualifica} si prevede di usare parte del tempo prima della scadenza del 06-03-2017 per la stesura della \emph{Definizione di Prodotto}.
+	\item Per raggiungere il completamento del perido successivo in tempo per la \emph{Revisione di Qualifica} si prevede di usare parte del tempo prima della scadenza del 06-03-2017 per la stesura della \emph{Definizione di Prodotto}.
 \end{itemize} 
 \end{figure}
 
@@ -354,14 +354,14 @@ Note:
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttpdc1.png}}
 \label{tab:ganttpa1}
-\caption{Diagramma di Gantt della pianificazione della fase di \PDC, in giorni (parte 1)}
+\caption{Diagramma di Gantt della pianificazione della \PDC, in giorni (parte 1)}
 \end{figure}
 
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttpdc2.png}}
 \label{tab:ganttpa1}
-\caption{Diagramma di Gantt della pianificazione della fase di \PDC, in giorni (parte 2)}
+\caption{Diagramma di Gantt della pianificazione della \PDC, in giorni (parte 2)}
 \end{figure}
 
 
@@ -379,7 +379,7 @@ Note:
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttva.png}}
 \label{tab:ganttpa1}
-\caption{Diagramma di Gantt della pianificazione della fase di \VV, in giorni}
+\caption{Diagramma di Gantt della pianificazione della \VV, in giorni}
 \end{figure}
 
 
@@ -453,7 +453,7 @@ A conclusione, è illustrato un quadro riassuntivo.
     
   \end{tabular}
 }
-\caption{Ore/ruolo per persona nella fase di \AR.}
+\caption{Ore/ruolo per persona durante l'\AR.}
 
 %\vspace*{1 cm}
 \end{figure}
@@ -466,7 +466,7 @@ A conclusione, è illustrato un quadro riassuntivo.
 {
 \includegraphics[width=1.1\textwidth]{img/orear1.png}
 }
-\caption{Ore/ruolo per persona nella fase di \AR.}
+\caption{Ore/ruolo per persona durante l\AR.}
 \label{fig:ar1}
 
 \end{figure}
@@ -475,7 +475,7 @@ A conclusione, è illustrato un quadro riassuntivo.
 \makebox[\textwidth][c]{
 \includegraphics[width=1.1\textwidth]{img/orear2.png}\par
 }
-\caption{Ore/persona per ruolo nella fase di \AR.}
+\caption{Ore/persona per ruolo durante l'\AR.}
 \label{fig:ar2}
 \end{figure}
 	
@@ -567,7 +567,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     
   \end{tabular}
 }
-\caption{Ore/ruolo per persona nella fase di \ARI.}
+\caption{Ore/ruolo per persona durante l'\ARI.}
 
 \end{figure} 
 % i colori danno problemi di visualizzazione alle linee
@@ -577,7 +577,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.15\textwidth]{img/oreari1.png}}
-\caption{Ore/ruolo per persona nella fase di \ARI.}
+\caption{Ore/ruolo per persona durante l'\ARI.}
 \label{fig:ari}
 
 \end{figure}
@@ -585,7 +585,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.15\textwidth]{img/oreari2.png}}
-\caption{Ore/persona per ruolo nella fase di \ARI.}
+\caption{Ore/persona per ruolo durante l'\ARI.}
 \label{fig:ari2}
 
 \end{figure}
@@ -668,7 +668,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     
   \end{tabular}
 }
-\caption{Ore/ruolo per persona nella fase di \PA.}
+\caption{Ore/ruolo per persona durante la \PA.}
 \end{figure} 
 % i colori danno problemi di visualizzazione alle linee
 \pagebreak
@@ -676,7 +676,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.1\textwidth]{img/orepa1.png}}
-\caption{Ore/ruolo per persona nella fase di \PA.}
+\caption{Ore/ruolo per persona durante la \PA.}
 \label{fig:pa1}
 
 \end{figure}
@@ -684,7 +684,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.1\textwidth]{img/orepa2.png}}
-\caption{Ore/persona per ruolo nella fase di \PA.}
+\caption{Ore/persona per ruolo durante la \PA.}
 \label{fig:pa2}
 
 \end{figure}
@@ -760,7 +760,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     
   \end{tabular}
   }
-    \caption{Ore/ruolo per persona nella fase di \PDC.}
+    \caption{Ore/ruolo per persona durante la \PDC.}
 
 \end{figure} 
 % i colori danno problemi di visualizzazione alle linee
@@ -770,7 +770,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 % USARE QUESTO PER IMMAGINI
 \begin{figure}[H]
   \makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth]{img/orepdc1.png}}
-  \caption{Ore/ruolo per persona nella fase di \PDC.}
+  \caption{Ore/ruolo per persona durante la \PDC.}
 \label{fig:pdc1}
 
 \end{figure}
@@ -782,7 +782,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.1\textwidth]{img/orepdc2.png}}
-\caption{Ore/persona per ruolo nella fase di \PDC.}
+\caption{Ore/persona per ruolo durante la \PDC.}
 \label{fig:pdc2}
 
 \end{figure}
@@ -860,7 +860,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     
   \end{tabular}
   }
-  \caption{Ore/ruolo per persona nella fase di \VV.}
+  \caption{Ore/ruolo per persona durante la \VV.}
 \label{fig:vv1}
 \end{figure} 
 % i colori danno problemi di visualizzazione alle linee
@@ -870,7 +870,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.1\textwidth]{img/orevv1.png}}
-\caption{Ore/ruolo per persona nella fase di \VV.}
+\caption{Ore/ruolo per persona durante la \VV.}
 \label{fig:vv1}
 
 \end{figure}
@@ -878,7 +878,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.1\textwidth]{img/orevv2.png}}
-\caption{Ore/persona per ruolo nella fase di \VV.}
+\caption{Ore/persona per ruolo durante la \VV.}
 \label{fig:vv2}
 
 \end{figure}
@@ -1176,7 +1176,7 @@ Qualora parte dei diagrammi non vengano riportati, si intende che essi hanno ris
 \includegraphics[width=1.2\textwidth]{img/ganttarc21.png}}
 \label{tab:cgen1}
 
-  \caption{Variazione rispetto alla pianificazione per fase di \AR, diagramma di Gantt}
+  \caption{Variazione rispetto alla pianificazione per l'\AR, diagramma di Gantt}
 \end{figure}
 
 Si è verificato un ritardo nella stesura del presente documento a causa di una influenza di un membro del gruppo in data 30-12-2016.
@@ -1263,7 +1263,7 @@ Qualora parte dei diagrammi non vengano riportati, si intende che essi hanno ris
 \includegraphics[width=1.2\textwidth]{img/ganttarc21.png}}
 \label{tab:cgen1}
 
-  \caption{Variazione rispetto alla pianificazione per fase di \AR, diagramma di Gantt}
+  \caption{Variazione rispetto alla pianificazione per l'\AR, diagramma di Gantt}
 \end{figure}
 
 Si è verificato un ritardo nella stesura del presente documento a causa di una influenza di un membro del gruppo in data 30-12-2016.
