--- a/doc/Interni/Norme_di_progetto/diario.tex
+++ b/doc/Interni/Norme_di_progetto/diario.tex
@@ -2,11 +2,15 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	2.0.0 & {\GG} (Responsabile) & 10/02/2017 & Approvazione del documento \\ \hline
+	1.1.0 & {\GG} (Verificatore) & 10/02/2017 & Verifica del documento \\ \hline
+	1.0.2 & {\LS} (Analista) & 08/02/2017 & Amplificate le sezioni di progettazione (sez. 2.2.2) e codifica (2.2.3) \\ \hline
+	1.0.1 & {\LS} (Analista) & 06/02/2017 & Unificate le sezioni 4.1 e 4.2 \\ \hline
 	1.0.0 & {\PB} (Responsabile) & 09/01/2017 & Approvazione del documento \\ \hline
 	0.1.0 & {\AZ} (Verificatore) & 20/12/2016 & Verifica del documento \\ \hline
 	0.0.5 & {\MM} (Amministratore) & 19/12/2016 & Stesura delle norme sui processi organizzativi \\ \hline
 	0.0.4 & {\GG} (Amministratore) & 19/12/2016 & Stesura delle norme sui processi di supporto \\ \hline
 	0.0.3 & {\MM} (Amministratore) & 17/12/2016 & Stesura delle norme sui processi di sviluppo \\ \hline
 	0.0.2 & {\GG} (Amministratore) & 17/12/2016 & Stesura dello scopo del documento e delle norme sulla documentazione \\ \hline
-	0.0.1 & {\MM} (Amministratore) & 15/12/2016 & Stesura scheletro \\ \hline
+	0.0.1 & {\MM} (Amministratore) & 15/12/2016 & Stesura scheletro del documento \\ \hline
 \end{diario}
