--- a/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
@@ -4,8 +4,8 @@
 
 
 
-\subsection{\gloss{Client}} \label{sec:tech_client}
-Implementeremo il client di \proj{} con le tecnologie web richieste dal capitolato d'appalto: \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}. Di seguito elenchiamo e descriviamo le librerie JavaScript di cui il nostro client necessita. Tutte le librerie sono open-source, come richiesto dal capitolato.
+\subsection{Client} \label{sec:tech_client}
+Implementeremo il \gloss{client} di \proj{} con le tecnologie web richieste dal capitolato d'appalto: \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}. Di seguito elenchiamo e descriviamo le librerie JavaScript di cui il nostro client necessita. Tutte le librerie sono open-source, come richiesto dal capitolato.
 
 \subsubsection{JointJS}
 La libreria \jointjs{} (\url{www.jointjs.com/opensource}) è una libreria open-source per realizzare \gloss{editor} di diagrammi interattivi, in maniera altamente personalizzabile.
@@ -48,7 +48,7 @@ stubs, mocks, (test spies??)
 \subsection{Server}
 
 \subsubsection{Apache Tomcat}
-Il \emph{back end} della nostra applicazione è ospitato su un server Apache Tomcat, come richiesto dal capitolato d'appalto nel caso il \emph{back end} fosse scritto in Java.
+Il \emph{back end} della nostra applicazione è ospitato su un \gloss{server} Apache Tomcat, come richiesto dal capitolato d'appalto nel caso il \emph{back end} fosse scritto in Java.
 
 \subsubsection{Pivotal Spring}
 Le richieste HTTP inviate dal client al server vengono gestite tramite la libreria open-source Spring (disponibile all'indirizzo \url{spring.io}), utile per aderire ai princìpi dello stile architetturale REST.
