--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -3012,23 +3012,25 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 & & \hyperref[UC6.3]{UC6.3}\\
 & & \hyperref[UC6.3.1]{UC6.3.1}\\ \hline
 
-\hypertarget{RFO6}{RFO6} & l'attore può generare l'applicativo dai diagrammi da lui realizzati & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
+\hypertarget{RFO6}{RFO6} & l'attore può ottenere (scaricare) automaticamente una cartella compressa contenente i diagrammi disegnati da \proj{}, l'applicativo generato tramite i diagrammi forniti dall'utente ed il codice sorgente nel linguaggio target & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
 & & \hyperref[UC7]{UC7}\\ \hline
 
 \hypertarget{RFO6.1}{RFO6.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha rispettato i vincoli imposti dagli stereotipi scelti& \hyperlink{Interno}{Interno}\\
 & & \hyperref[UC7.1]{UC7.1}\\ \hline
 
-\hypertarget{RFO7}{RFO7} & il sistema genera il programma in Java & \hyperlink{Interno}{Interno}\\ \hline
+\hypertarget{RFO7}{RFO7} & il sistema riceve una richiesta http post contenente i file JSON generato dal programma utente & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RFO7.1}{RFO7.1} & il sistema traduce il file JSON in un oggetto Java corrispondente& \hyperlink{Interno}{Interno}\\ \hline
+\hypertarget{RFO8}{RFO8} & il sistema genera il programma in Java & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RFO7.2}{RFO7.2} & il sistema traduce l'oggetto Java nel corrispondente codice sorgente Java & \hyperlink{Interno}{Interno}\\ \hline
+\hypertarget{RFO8.1}{RFO8.1} & il sistema traduce il file JSON in un oggetto Java corrispondente& \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RFO8}{RFO8} & il sistema compila il codice sorgente Java generato& \hyperlink{Interno}{Interno}\\ \hline
+\hypertarget{RFO8.2}{RFO8.2} & il sistema traduce l'oggetto Java nel corrispondente codice sorgente Java & \hyperlink{Interno}{Interno}\\ \hline
+
+\hypertarget{RFO9}{RFO9} & il sistema compila il codice sorgente Java generato& \hyperlink{Interno}{Interno}\\ \hline
 	
-\hypertarget{RFO9}{RFO9} & il sistema crea una cartella compressa contenente il file JSON, il codice sorgente Java e il programma Java compilato & \hyperlink{Interno}{Interno}\\ \hline
+\hypertarget{RFO10}{RFO10} & il sistema crea una cartella compressa contenente il file JSON, il codice sorgente Java e il programma Java compilato & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RFO10}{RFO10} & il sistema elabora una risposta htto contenente l'indirizzo della cartella compressa creata & \hyperlink{Interno}{Interno}\\ \hline
+\hypertarget{RFO11}{RFO11} & il sistema elabora una risposta htto contenente l'indirizzo della cartella compressa creata & \hyperlink{Interno}{Interno}\\ \hline
 
 \caption[Requisiti Funzionali]{Requisiti Funzionali}
 \label{tabella:req0}
@@ -3787,15 +3789,17 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 
 \hyperlink{RFO7}{RFO7} & \hyperlink{Interno}{Interno}\\\hline
 
-\hyperlink{RFO7.1}{RFO7.1} & \hyperlink{Interno}{Interno}\\\hline
-
-\hyperlink{RFO7.2}{RFO7.2} & \hyperlink{Interno}{Interno}\\\hline
-
 \hyperlink{RFO8}{RFO8} & \hyperlink{Interno}{Interno}\\\hline
+
+\hyperlink{RFO8.1}{RFO8.1} & \hyperlink{Interno}{Interno}\\\hline
+
+\hyperlink{RFO8.2}{RFO8.2} & \hyperlink{Interno}{Interno}\\\hline
 
 \hyperlink{RFO9}{RFO9} & \hyperlink{Interno}{Interno}\\\hline
 
 \hyperlink{RFO10}{RFO10} & \hyperlink{Interno}{Interno}\\\hline
+
+\hyperlink{RFO11}{RFO11} & \hyperlink{Interno}{Interno}\\\hline
 
 \hyperlink{RQO1}{RQO1} & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
@@ -4011,11 +4015,12 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 & \hyperlink{RFO5.3.1}{RFO5.3.1}\\
 & \hyperlink{RFO6.1}{RFO6.1}\\
 & \hyperlink{RFO7}{RFO7}\\
-& \hyperlink{RFO7.1}{RFO7.1}\\
-& \hyperlink{RFO7.2}{RFO7.2}\\
 & \hyperlink{RFO8}{RFO8}\\
+& \hyperlink{RFO8.1}{RFO8.1}\\
+& \hyperlink{RFO8.2}{RFO8.2}\\
 & \hyperlink{RFO9}{RFO9}\\
 & \hyperlink{RFO10}{RFO10}\\
+& \hyperlink{RFO11}{RFO11}\\
 & \hyperlink{RQO1.1}{RQO1.1}\\
 & \hyperlink{RQO1.1.1}{RQO1.1.1}\\
 & \hyperlink{RQO1.2}{RQO1.2}\\
@@ -4407,7 +4412,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \hline
 \textbf{Tipo} & \textbf{Obbligatorio} & \textbf{Desiderabile} & \textbf{Facoltativo}\\
 \hline
-Funzionale & 165 & 11 & 0\\ \hline
+Funzionale & 166 & 11 & 0\\ \hline
 Prestazionale & 0 & 0 & 0\\ \hline
 Di Qualità & 8 & 0 & 2\\ \hline
 Di Vincolo & 7 & 2 & 0\\ \hline
