modifiche ST intro, autori, supervisori

--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -4,11 +4,11 @@
 \input{../../util/hx-ambiente}
 
 \version{0.0.1}
-\creaz{15 febbraio 2017}
-\author{...}
-\supervisor{...}
+\creaz{10 febbraio 2017}
+\author{\ALL}
+\supervisor{\MM, \AZ}
 \uso{esterno}
-\dest{\ALL}
+\dest{\TV, \RC, \GP, \ALL}
 \title{Specifica Tecnica}
 % \date{9 gennaio 2017}
 
@@ -17,7 +17,6 @@
 \include{diario}
 \tableofcontents
 \listofpattern
-\newpage
 
 
 
