--- a/doc/Esterni/Specifica_tecnica/tex/intro.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/intro.tex
@@ -20,7 +20,7 @@ Ci è parso utile indicizzare i \emph{design patter} utilizzati; per questo, li 
 
 \subsubsection{Riferimenti normativi}
 \begin{itemize}
-	\item Norme di Progetto: \NdP.
+	\item \NdP.
 \end{itemize}
 
 \subsubsection{Riferimenti informativi}
@@ -32,8 +32,8 @@ Ci è parso utile indicizzare i \emph{design patter} utilizzati; per questo, li 
 	\item Libreria \jquery: \url{jquery.com}, visitato in data 01/03/2017;
 	\item Libreria \requirejs: \url{www.requirejs.org}, visitato in data 01/03/2017;
 	\item Libreria \lodash: \url{lodash.com}, visitato in data 01/03/2017;
-	\item Server Apache Tomcat: \url{tomcat.apache.org}, visitato in data 01/03/2017.
-	\item Libreria Pivotal Spring: \url{spring.io}, visitato in data 01/03/2017.
-	\item Libreria StringTemplate: \url{stringtemplate.org}, visitato in data 01/03/2017.
-	\item Libreria Google Gson: \url{github.com/google/gson}, visitato in data 01/03/2017.
+	\item Server \emph{Apache Tomcat}: \url{tomcat.apache.org}, visitato in data 01/03/2017.
+	\item Libreria \emph{Pivotal Spring}: \url{spring.io}, visitato in data 01/03/2017.
+	\item Libreria \emph{StringTemplate}: \url{stringtemplate.org}, visitato in data 01/03/2017.
+	\item Libreria \emph{Google Gson}: \url{github.com/google/gson}, visitato in data 01/03/2017.
 \end{itemize}
