Aggiunto SDMetrics e CodeProAnalytics in NdP

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -655,7 +655,27 @@ La verifica è un processo analitico che va implementato in due passi successivi
 	\subsubsection{Strumenti}
 	In questa sezione vengono dettagliate le caratteristiche e funzionalità degli strumenti automatici scelti per la misurazione delle metriche definite nel paragrafo precedente.
 		\subparagraph{SDMetrics}
-		\subparagraph{CodePRO Analitix}
+		SDMetrics fornisce:
+		\begin{itemize}
+			\item un ampio insieme di misurazioni per la progettazione;
+			\item un complesso di regole per il controllo della progettazione;
+			\item una serie di feedback proattivi sulla qualità degli schemi di progettazione realizzati;
+			\item un insieme estendibile di misurazioni per la progettazione e di regole di progettazione;
+			\item interoperabilità con gli strumenti UML;
+			\item la possibilità di esportare i risultati delle misurazioni;
+			\item un interfaccia grafica interattiva;
+			\item velocita nel processare le informazioni e fornire i risultati;
+		\end{itemize}
+
+		\subparagraph{CodePRO Analytix}
+		CodePRO Analytix fornisce:
+		\begin{itemize}
+			\item analisi statica del codice con più di 1200 regole di controllo del codice;
+			\item rilevamento dei difetti e suggerimento di azioni di riparazione;
+			\item possibilità di definire insiemi di regole di controllo personalizzate;
+			\item analisi della copertura del codice;
+			\item intergazione con Eclipse.
+		\end{itemize}
 
 \subsection{Validazione}
 Ogni verifica di una parte della configurazione dev'essere vagliata dal responsabile di progetto; per questo, il responsabile deve controllare i risultati dei test. Egli può approvarli oppure chiedere ai verificatori di ripeterli. L'approvazione determina:
